[gd_scene load_steps=4 format=3 uid="uid://dtyx70vcn4f7i"]

[ext_resource type="Script" uid="uid://dmvxlbbig8pvr" path="res://scenes/screens/voice_tuning_screen/voice_tuning_screen.gd" id="1_5danj"]
[ext_resource type="Lexicon" uid="uid://7ckfm3viegpl" path="res://resources/cmudict_full.dict" id="1_pwots"]
[ext_resource type="PackedScene" uid="uid://dqwoaq24wd1nl" path="res://scenes/ui_prefabs/back_button/back_button.tscn" id="3_16k62"]

[node name="VoiceTuningScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5danj")

[node name="SpeechSynthesizerNode" type="SpeechSynthesizerNode" parent="."]
lexicon = ExtResource("1_pwots")
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" parent="VBoxContainer" instance=ExtResource("3_16k62")]
layout_mode = 2
size_flags_horizontal = 0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -420

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/GridContainer"]
layout_mode = 2
text = "Root"

[node name="Label2" type="Label" parent="VBoxContainer/HSplitContainer/GridContainer"]
layout_mode = 2
text = "Stress"

[node name="RootList" type="ItemList" parent="VBoxContainer/HSplitContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StressList" type="ItemList" parent="VBoxContainer/HSplitContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
